fixed sidebar container overlapping border when browser window is small win width

--- a/frontend/src/app/app-layout/side-navbar.scss
+++ b/frontend/src/app/app-layout/side-navbar.scss
@@ -1,8 +1,8 @@
 #side-navbar-container {
-  width: 15vw;
+  width: 20vw;
   background-color: rgb(248, 249, 250);
   border-right-style: solid;
-  border-right-color: rgb(16, 45, 92);;
+  border-right-color: rgb(16, 45, 92);
   border-right-width: 3px;
   min-height: 85vh;
 }
